Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/InvalidChar1.ru

/? Error Léxico, char con más de un caracter, salida: carácter invalido
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 5 | COLUMNA 3 | ERROR EN LA DEFINICION DEL CARACTER: CARACTER NO VALIDO 'aa
'aa'